uikit-2.27.4/astam-paintings-style.css
/* ... */
.canvas .canvas-wrap .tm-rul-wrap .tm-ruler {
  border-bottom: 2px solid #fff;
  width: 38px;
  height: 10px;
  border-right: 2px solid  #fff;
  position: relative;
}
.canvas .canvas-wrap .tm-rul-wrap .tm-ruler span {
  position: absolute;
  top: -10px;
  right: 2px;
  color: #fff;
  font-size: 12px;
}
.canvas .canvas-wrap .tm-canv-wrap .tm-rulv-wrap {
  padding-left: 20px;
  padding-top: 36px;
  background: #0098ff;
  min-height: 100%;
  border-right: 2px solid #fff;
}
.canvas .canvas-wrap .tm-canv-wrap .tm-rulv-wrap .tm-ruler {
  border-top: 2px solid  #fff;
  width: 10px;
  height: 38px;
  position: relative;
}
.canvas .canvas-wrap .tm-canv-wrap .tm-rulv-wrap .tm-ruler span {
  position: absolute;
  top: 0px;
  left: -10px;
  color: #fff;
  font-size: 12px;
}
.canvas .canvas-wrap .tm-canv-bottom {
  width: 100%;
  background: #cecece;
  padding-top: 5px;
  padding-bottom: 10px;
}
.canvas .canvas-wrap .tm-canv-bottom .tm-info {
  font-size: 13px;
  font-family: "RobotoLight", sans-serif;
  font-weight: 400;
}
.canvas .canvas-wrap .tm-canv-bottom .tm-info i {
  padding-left: 12px;
  padding-right: 8px;
  color: #426ec7;
}
.canvas .canvas-wrap .tm-canv-bottom .tm-info a {
  color: #000;
}
.canvas .canvas-wrap .tm-canv-bottom .tm-info:last-child a {
  margin-left: 10px;
}
.canvas .canvas-wrap .tm-canv-bottom .pic-data {
  padding: 0 10px;
}
.canvas #canvas {
  right: 55px;
  top: 65px;
  height: 480px;
  width: 800px;
  overflow: hidden;
  background-position: center;
  background-size: 100% 100%;
  border: none !important;
  box-shadow: inset 1px 1px 10px #333;
}
.canvas .tm-canv-icon {
  display: none;
  position: absolute;
  top: 65px;
  right: 20px;
  color: #fff;
  cursor: pointer;
}
.canvas .tm-canv-icon.sub {
  display: block;
  color: #cecece;
  cursor: default;
}
.canvas .tm-canv-icon.sub:hover {
  color: #cecece;
}
.canvas .tm-canv-icon.sub.close {
  top: 95px;
  right: 22px;
}
.canvas .tm-canv-icon.sub.check {
  top: 125px;
}
.canvas .tm-canv-icon.sub.trash {
  top: 155px;
}
.canvas .tm-canv-icon:hover {
  color: #253c7f;
}
.canvas .tm-canv-icon.tm-del {
  top: 95px;
  right: 22px;
}
.canvas .tm-canv-icon.tm-del:hover {
  color: pink;
}
.canvas .tm-canv-icon.tm-undo {
  top: 220px;
}
.canvas .tm-canv-icon.tm-undo:hover {
  color: #cb3000;
}
.canvas .tm-canv-icon.tm-redo {
  top: 250px;
}
.canvas .tm-canv-icon.tm-redo:hover {
  color: lightgreen;
}
.canvas .tm-canv-icon.tm-save {
  top: 185px;
}
.canvas .tm-canv-icon.tm-save:hover {
  color: #0cc;
}
.canvas .tm-canv-icon.tm-rem {
  top: 155px;
}
.canvas .tm-canv-icon.tm-rem:hover {
  color: #cb3000;
}
.canvas .tm-canv-icon.tm-check {
  top: 125px;
  /* top: 220px; */
}
.canvas .tm-canv-icon.tm-check:hover {
  color: forestgreen;
}
/* Canvas End */
/* Pics Start */
#pics {
  padding-top: 1px;
  padding-bottom: 100px;
  background: #0098ff;
  /* img {
    width: 100%;
  } */
}
#pics h1 {
  font-size: 48px;
  color: #ffffff;
  margin: 1.5em 0;
}
/* Pics End */
/* how to use Start */
#how-to-use h4 {
  font-size: 24px;
  font-weight: 300;
}
#how-to-use .tm-pics ol li {
  color: #344055;
  padding: 5px 0;
  font-family: 'RobotoLight', sans-serif;
}
/* how to use End */
/* See-in modal Start*/
#see-in .tm-see-pics {
  position: relative;
}
#see-in .tm-see-pics .tm-ready {
  position: absolute;
  top: 50px;
  left: calc(39%);
  width: 20%;
}
/* See-in modal end */
/* Working Start */
#working {
  padding-top: 1px;
  padding-bottom: 100px;
}
#working h1 {
  font-size: 48px;
  color: #253c7f;
  margin: 1.5em 0;
}
#working .tm-working-item {
  /* width: 16%; */
  cursor: pointer;
  position: relative;
}
#working .tm-working-item .tm-working-pic {
  text-align: center;
  padding-bottom: 30px;
}
#working .tm-working-item .tm-working-text {
  text-align: center;
  font-size: 24px;
  line-height: 1.4em;
  color: #344055;
}
#working .tm-working-item .tm-working-text i {
  font-size: 14px;
}
#working .tm-working-item .tm-working-overlay {
  width: 100%;
  height: 100%;
  background: rgba(255, 255, 255, 0.7);
  position: absolute;
  top: 0;
  left: 0;
  padding-left: 25px;
  /* padding-right: 25px; */
  box-sizing: border-box;
}
#working .tm-working-item .tm-working-overlay .tm-working-overlay-top {
  font-size: 24px;
  text-align: center;
  line-height: 1.4em;
  padding-bottom: 10px;
}
#working .tm-working-item .tm-working-overlay .tm-working-overlay-top i {
  font-size: 14px;
}
#working .tm-working-item .tm-working-overlay .tm-working-overlay-bottom {
  font-size: 16px;
  text-align: center;
}
/* Working End */
/* madein Start */
#madein {
  padding-top: 1px;
  background: #e3e4e4;
}
#madein h1 {
  font-size: 48px;
  color: #253c7f;
  margin: 1.5em 0;
}
#madein .madein-list {
  color: #253c7f;
  font-size: 20px;
  font-weight: bold;
  width: 450px;
  margin: 0 auto;
}
#madein .madein-list ul.madein-list-ul {
  list-style: none;
}
#madein .madein-list ul.madein-list-ul li {
  font-family: 'RobotoLight', sans-serif;
  position: relative;
  margin-bottom: 20px;
}
#madein .madein-list ul.madein-list-ul li:before {
  content: '';
  position: absolute;
  width: 20px;
  height: 20px;
  top: 0;
  left: -35px;
  background-image: url(images/madein/elips.png);
  background-repeat: no-repeat;
  background-position: center;
}
#madein .madein-block-wrap {
  padding-top: 20px;
}
#madein .madein-block-wrap .madein-block {
  height: 200px;
  position: relative;
}
#madein .madein-block-wrap .madein-block.madein-block-pic img {
  position: absolute;
  bottom: 0;
  right: 120px;
  width: 500px;
}
#madein .madein-block-wrap .madein-block.madein-block-text .madein-block-text-in {
  padding: 20px;
  background: #7e8684;
  color: #ffffff;
  border-radius: 5px;
  width: 500px;
  font-size: 17px;
}
/* madein End */
/* vidblk Start */
#vidblk {
  padding-top: 150px;
  padding-bottom: 100px;
}
#vidblk h1 {
  font-size: 48px;
  color: #253c7f;
  margin: 1.5em 0;
}
/* ... */

